# chargate

./: .gitignore  .mega-linter.yml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  PROJECT_INDEX.json  README.md  action.yml  docker-bake.hcl  mkdocs.yml  pyproject.toml
.claude/: ARCHITECTURE_MAP.md  COMMON_MISTAKES.md  QUICK_START.md  settings.json
.claude/decisions/: README.md
.claude/sessions/: TEMPLATE.md
.github/: dependabot.yml
.github/workflows/: app-scan.yaml  chargate.yaml  ci.yaml  ci.yml  cinnabar.yaml  gate.yml  release.yaml  release.yml  security.yml  update-tools.yaml
app/: README.md  app-manifest.json  docker-compose.yml
app/api/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
app/api/alembic/: env.py
app/api/alembic/versions/: 0001_initial.py
app/api/chargate_api/: __init__.py  config.py  crud.py  db.py  deps.py  github.py  main.py  migrate.py  models.py  repository.py  sarif.py  schemas.py  security.py
app/api/chargate_api/db/: __init__.py  driver.py
app/api/chargate_api/routers/: auth.py  findings.py  scans.py  webhooks.py
app/api/tests/: conftest.py  test_repository.py  test_sarif.py  test_security.py
app/api/worker/: entry.py  wrangler.toml
app/api/worker/migrations/: 0001_init.sql
app/deploy/cloudflare/: README.md  wrangler.toml
app/deploy/k8s/: api.yaml  ingress.yaml  kustomization.yaml  migrate-job.yaml  namespace.yaml  secret.example.yaml  web.yaml
app/web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json
app/web/src/: App.tsx  api.ts  auth.tsx  format.ts  index.css  types.ts  useApi.ts
app/web/src/components/: FindingsFilterBar.tsx  FindingsTable.tsx  Severity.tsx  TopBar.tsx  states.tsx
app/web/src/pages/: AllFindings.tsx  Overview.tsx  RepoDetail.tsx
app/worker/: package.json  wrangler.toml
app/worker/src/: index.js
app/worker/test/: index.test.js
broker/: Dockerfile  __init__.py  app.py  config.py  github.py  oidc.py  requirements.txt
broker/tests/: test_broker.py
docs/: architecture.md  cli.md  index.md  net-new.md  setup.md
examples/: .pre-commit-config.yaml  action.yaml  reusable-workflow.yaml
hooks/: enforce-conventional-branch-name.sh  github-actions-pin-sha.sh
k8s/base/: deployment.yaml  externalsecret.yaml  ghcr-pull-secret.yaml  ingress.yaml  kustomization.yaml  service.yaml
k8s/overlays/prod/: kustomization.yaml
scripts/: bump-tool-versions.py  ci-install-tools.sh  ci-report.sh  lint-actionlint.sh  lint-eslint.sh  lint-hadolint.sh  lint-kustomize.sh  lint-shellcheck.sh  render-dashboard.py  request-app-token.sh  sarif-to-annotations.py  security-checkov.sh  security-govulncheck.sh  security-npm-audit.sh  security-pip-audit.sh  security-semgrep.sh  security-trivy-license.sh  security-trivy-vuln.sh  security-trufflehog.sh
scripts/lib/: common.sh  sarif.py
src/chargate/: __init__.py  cli.py  defectdojo.py  dependencytrack.py  gate.py  git.py  github_comment.py  install_hooks.py  local.py  megalinter.py  modes.py  report.py
src/chargate/sarif/: __init__.py  counts.py  diff.py  filter.py  model.py
tests/: conftest.py  test_cli.py  test_defectdojo.py  test_dependencytrack.py  test_gate.py  test_git.py  test_github_comment.py  test_install_hooks.py  test_local.py  test_megalinter.py  test_modes.py  test_report.py  test_sarif_counts.py  test_sarif_diff.py  test_sarif_filter.py
tests/fixtures/dashboard/: sample.sarif
