[project]
name = "chargate"
version = "2.0.0"
description = "Security + lint gate: a thin MegaLinter wrapper with net-new (PR-diff) finding gating."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Caleb Sargeant", email = "caleb@magmamoose.com" }]
keywords = ["security", "lint", "sarif", "megalinter", "gate", "defectdojo"]
# The core net-new filter is intentionally stdlib-only so it stays trivially
# testable and the package stays light. The DefectDojo client uses urllib too.
dependencies = []

[project.scripts]
chargate = "chargate.cli:main"

[project.urls]
Homepage = "https://github.com/MagmaMoose/chargate"
Source = "https://github.com/MagmaMoose/chargate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chargate"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]
# Docs tooling (non-default group): `uv run --group docs mkdocs serve|build`.
docs = ["mkdocs-material>=9.5"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
