[project]
name = "chargate"
version = "2.5.1"
description = "Security + lint gate: a thin MegaLinter wrapper with net-new (PR-diff) finding gating."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Caleb Sargeant", email = "caleb@magmamoose.com" }]
keywords = ["security", "lint", "sarif", "megalinter", "gate", "defectdojo"]
# The core net-new filter is intentionally stdlib-only so it stays trivially
# testable and the package stays light. The DefectDojo client uses urllib too.
dependencies = []

[project.scripts]
chargate = "chargate.cli:main"

[project.urls]
Homepage = "https://github.com/MagmaMoose/chargate"
Source = "https://github.com/MagmaMoose/chargate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chargate"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]
# Docs tooling (non-default group): `uv run --group docs mkdocs serve|build`.
docs = ["mkdocs-material>=9.5"]
# The token-broker service under `broker/` is a separate deployable with its own
# deps — they are deliberately NOT runtime deps of the stdlib-only chargate CLI.
# Test with: `uv run --group broker python -m pytest broker/tests`.
broker = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pyjwt[crypto]>=2.9",
  "httpx>=0.27",
  "pydantic-settings>=2.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "broker"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

# python-semantic-release (driven by Diatreme on release; see
# .github/workflows/release.yml). PSR computes the next stable version from
# conventional commits since the last tag and writes it to BOTH locations below,
# so the hatchling package version and `chargate version` stay in lockstep — do
# not bump these by hand.
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/chargate/__init__.py:__version__"]
build_command = ""          # version-only release: a git tag + GitHub Release, no PyPI build
major_on_zero = false
tag_format = "v{version}"
commit_message = "chore(release): v{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false          # Diatreme controls prerelease via its inputs, not here

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"
